chgmgmt_build/src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>年齢</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <label>職歴</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comp001__c</fullName>
        <label>コンピテンシー001</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skilled</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Strategic Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp002__c</fullName>
        <label>コンピテンシー002</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skilled</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Strategic Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp003__c</fullName>
        <label>コンピテンシー003</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skilled</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Strategic Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DepartmentChangeDate__c</fullName>
        <label>所属変更日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>設計管理部
店舗開発部
プロモーションサプライ部
ナショナルマーケティング部
ピープルディベロップメント部
リージョナルコントローラー部
CSR部
直営店舗</description>
        <label>部門</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>設計管理部</fullName>
                </value>
                <value>
                    <fullName>店舗開発部</fullName>
                </value>
                <value>
                    <fullName>プロモーションサプライ部</fullName>
                </value>
                <value>
                    <fullName>ナショナルマーケティング部</fullName>
                </value>
                <value>
                    <fullName>ピープルディベロップメント部</fullName>
                </value>
                <value>
                    <fullName>リージョナルコントローラー部</fullName>
                </value>
                <value>
                    <fullName>CSR部</fullName>
                </value>
                <value>
                    <fullName>直営店舗</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>店舗開発本部
サプライチェーン本部
マーケティング本部
東日本　営業推進部
コーポレートリレーション本部
財務本部
人事本部
ドナルド・マクドナルド・ハウス
直営店舗</description>
        <label>本部</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>店舗開発本部</fullName>
                </value>
                <value>
                    <fullName>サプライチェーン本部</fullName>
                </value>
                <value>
                    <fullName>マーケティング本部</fullName>
                </value>
                <value>
                    <fullName>東日本　営業推進部</fullName>
                </value>
                <value>
                    <fullName>コーポレートリレーション本部</fullName>
                </value>
                <value>
                    <fullName>財務本部</fullName>
                </value>
                <value>
                    <fullName>人事本部</fullName>
                </value>
                <value>
                    <fullName>ドナルド・マクドナルド・ハウス</fullName>
                </value>
                <value>
                    <fullName>直営店舗</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_M__c</fullName>
        <label>F/M</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>Organization__r.Field3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部門</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <formula>Organization__r.Field27__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本部</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>名</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <formula>LastName__c + &quot; &quot; + FirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HireDate__c</fullName>
        <label>入社日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobProfileChangeDate__c</fullName>
        <description>現在の職位（ジョブプロファイル）に就いた日付</description>
        <label>職位変更日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobProfileName__c</fullName>
        <description>Wave Analytics用</description>
        <formula>JobProfile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ジョブプロファイル名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ジョブプロファイル</label>
        <referenceTo>JobProfile__c</referenceTo>
        <relationshipLabel>従業員</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>姓</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ManagerFullName__c</fullName>
        <formula>Manager__r.LastName__c &amp; &quot; &quot; &amp; Manager__r.FirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>上司氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>上司従業員番号</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>部下</relationshipLabel>
        <relationshipName>Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>組織</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>従業員</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SkillManagerChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>チェックできるのは直属の上司従業員のみ（チェックを外すことは可能）</inlineHelpText>
        <label>保有スキル上司チェック</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TerminationDate__c</fullName>
        <label>退職日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wave_NumberFullName__c</fullName>
        <description>Wave Analytics用</description>
        <formula>Name + &quot;：&quot; + FullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>従業員番号：氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_YearsInJobProfile__c</fullName>
        <description>Wave Analytics用</description>
        <formula>TEXT( YearsInJobProfile__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>現職位年数（テキスト）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YearsInDepartment__c</fullName>
        <label>現所属年数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YearsInJobProfile__c</fullName>
        <description>職位変更日の年から何年目かを表示（職位変更日が今年であれば1年目）</description>
        <formula>IF( !ISBLANK( JobProfileChangeDate__c ), ( YEAR( TODAY() ) - YEAR( JobProfileChangeDate__c ) ) + 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>現職位年数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>従業員</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LastName__c</columns>
        <columns>FirstName__c</columns>
        <columns>JobProfile__c</columns>
        <columns>Division__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SkillAssesment</fullName>
        <columns>NAME</columns>
        <columns>FullName__c</columns>
        <columns>JobProfile__c</columns>
        <columns>Division__c</columns>
        <columns>Department__c</columns>
        <columns>Comp001__c</columns>
        <columns>Comp002__c</columns>
        <columns>Comp003__c</columns>
        <columns>Comp004__c</columns>
        <columns>Comp005__c</columns>
        <columns>Comp006__c</columns>
        <columns>Comp007__c</columns>
        <columns>Comp008__c</columns>
        <columns>Comp009__c</columns>
        <columns>Comp010__c</columns>
        <filterScope>Everything</filterScope>
        <label>保有スキルアセスメント</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>従業員番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SkillManagerCheckedOn</fullName>
        <active>true</active>
        <description>「保有スキル上司チェック」をONにできるのは直属の上司従業員のみ（チェックを外すことは可能）</description>
        <errorConditionFormula>ISCHANGED( SkillManagerChecked__c ) &amp;&amp; SkillManagerChecked__c &amp;&amp; !ISBLANK( Manager__c ) &amp;&amp; $User.Id &lt;&gt; Manager__r.User__c</errorConditionFormula>
        <errorDisplayField>SkillManagerChecked__c</errorDisplayField>
        <errorMessage>「保有スキル上司チェック」をONにできるのは直属の上司従業員のみです</errorMessage>
    </validationRules>
</CustomObject>